@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0
hide circles
hide methods


class GSM {

}

class Team {
    members
}

class Entry {
    task
    greenSpace
}

class AgendaEntry {
    startDate
    endDate
    status
}

class Agenda {
    AgendaEntries
}


Agenda "1" -- "0..*" AgendaEntry : includes >
AgendaEntry "1" -- "1" Entry: is a >
GSM "1" -- "0..*" Team : assign >
Team "1" -- "0..*" AgendaEntry : has >


@enduml